[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repspat"
version = "0.1.0"
description = "Spatial statistics utilities for cell imaging datasets"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Amanpreet Singh", email = "amanpreetsingh2212@gmail.com" }
]
dependencies = [
  "numpy",
  "pandas",
  "scanpy",
  "scipy",
  "scikit-learn",
  "statsmodels",
  "networkx",
  "matplotlib",
  "squidpy>=1.2"
]

[project.urls]
Homepage = "https://github.com/yourusername/spatialstats"
Issues = "https://github.com/yourusername/spatialstats/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
