[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repspat"
version = "0.1.0"
description = "Spatial statistics and clustering for single-cell imaging datasets"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Amanpreet Singh", email = "amanpreetsingh2212@gmail.com" }
]
keywords = [
  "spatial statistics",
  "single-cell",
  "clustering",
  "imaging",
  "bioinformatics",
  "MMD",
  "histopathology"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Visualization",
  "Operating System :: OS Independent"
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scanpy>=1.9",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "statsmodels>=0.14",
  "networkx>=3.1",
  "matplotlib>=3.8",
  "squidpy>=1.2"
]

[project.urls]
Homepage = "https://github.com/amanpreet60/repspat"
Repository = "https://github.com/amanpreet60/repspat"
Issues = "https://github.com/amanpreet60/repspat/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
